# ai_command_center

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml
ai_command_center/: hooks.py  install.py  modules.txt  patches.txt
ai_command_center/ai_command_center/doctype/ai_conversation/: ai_conversation.json  ai_conversation.py
ai_command_center/ai_command_center/doctype/ai_dashboard/: ai_dashboard.json  ai_dashboard.py
ai_command_center/ai_command_center/doctype/ai_dashboard_widget/: ai_dashboard_widget.json  ai_dashboard_widget.py
ai_command_center/ai_command_center/doctype/ai_generated_file/: ai_generated_file.json  ai_generated_file.py
ai_command_center/ai_command_center/doctype/ai_message/: ai_message.json  ai_message.py
ai_command_center/ai_command_center/doctype/ai_permission_audit/: ai_permission_audit.json  ai_permission_audit.py
ai_command_center/ai_command_center/doctype/ai_support_interaction/: ai_support_interaction.json  ai_support_interaction.py
ai_command_center/ai_command_center/doctype/ai_tool_call/: ai_tool_call.json  ai_tool_call.py
ai_command_center/ai_command_center/doctype/ai_training_assessment/: ai_training_assessment.json  ai_training_assessment.py
ai_command_center/api/: audit.py  auth.py  communications.py  crud.py  dashboards.py  files.py  modules.py  permissions.py  reports.py  schema.py  selling.py  support.py  workflow.py
ai_command_center/utils/: constants.py  field_filter.py  permission_guard.py  query_sanitizer.py  response.py
(+6 files in other folders)
