[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_command_center"
version = "0.1.2"
description = "Secure AI command layer for ERPNext and Frappe"
authors = [{name = "AnantDV", email = "support@example.com"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[tool.setuptools.packages.find]
include = ["ai_command_center*"]

[tool.setuptools.package-data]
ai_command_center = ["**/*.json", "**/*.txt", "**/*.md"]
